# nfl-predictor

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_base_dataset_check.py  run_data_check.py  run_epa_feature_check.py  run_epa_sanity_check.py  run_feature_check.py
src/nfl_predictor/: __init__.py  config.py
src/nfl_predictor/data/: __init__.py
src/nfl_predictor/data/feature_engineering/: __init__.py  epa_features.py  feature_builder.py  rolling_features.py  team_stats_pipeline.py
src/nfl_predictor/data/loaders/: __init__.py  games.py  nflreadpy_client.py
src/nfl_predictor/data/preprocessing/: __init__.py  base_dataset.py
src/nfl_predictor/evaluation/: __init__.py  splits.py
src/nfl_predictor/models/: __init__.py
src/nfl_predictor/models/moneyline/: __init__.py
src/nfl_predictor/models/shared/: __init__.py
src/nfl_predictor/models/total_points/: __init__.py
src/nfl_predictor/serving/: __init__.py
src/nfl_predictor/utils/: __init__.py
tests/: __init__.py  conftest.py  test_data_quality.py  test_epa_features.py  test_feature_engineering.py  test_games_loader.py  test_preprocessing.py  test_team_stats_pbp_integration.py
