[tool.poetry]
name = "nfl-predictor"
version = "0.1.0"
description = "NFL prediction system with leak-free evaluation, advanced feature engineering, and automated deployment."
authors = ["Marek Seablom-Michel"]
readme = "README.md"
packages = [
    { include = "nfl_predictor", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.26.0"
scikit-learn = "^1.4.0"
xgboost = "^2.0.0"
nfl-data-py = "^0.3.0"
nflreadpy = "^0.1.5"
pyarrow = "^17.0.0"
mlflow = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=nfl_predictor"
markers = [
    "integration: marks tests as integration tests (may be slow or hit external services)"
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"